# libmotiongraphics

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Exception.hpp  FFmpegReader.cpp  FFmpegReader.hpp  Frame.hpp  ReaderBase.hpp
test/: CMakeLists.txt  main.cpp
